{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 107,
  "lineage": "a8b603e8-a73f-c1f3-eacd-26f092f3211d",
  "resources": [
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02fc0b38b6fb5b872",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-0-49-90.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.49.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_eip"
            },
            "tags_all": {
              "Name": "nat_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01522a05eb4ff2481",
            "arn": "arn:aws:ec2:ap-south-1:383058400024:instance/i-0a87d47351af4d7a2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a87d47351af4d7a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Anubhav",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05214ac10cdca4457",
            "private_dns": "ip-10-0-0-51.ap-south-1.compute.internal",
            "private_ip": "10.0.0.51",
            "public_ip": "35.154.167.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0190fd7ba2e59310a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033952804c5dc6b54",
            "tags": {
              "Name": "apache_web_server"
            },
            "tags_all": {
              "Name": "apache_web_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0be38b17db5a56de2"
            ]
          },
          "dependencies": [
            "module.ec2_private.aws_security_group.web_secgroup",
            "module.ec2_private.aws_subnet.web_subnet",
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ami",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-017009dca342e614c",
            "arn": "arn:aws:ec2:ap-south-1:383058400024:instance/i-0d73be0a2a9aacc56",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d73be0a2a9aacc56",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Anubhav",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0684fea5754cb7011",
            "private_dns": "ip-10-0-1-200.ap-south-1.compute.internal",
            "private_ip": "10.0.1.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c681acd0a7d8a957",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fda814bac7dc4cd2",
            "tags": {
              "Name": "jenkins_server"
            },
            "tags_all": {
              "Name": "jenkins_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09767662a78a54391"
            ]
          },
          "dependencies": [
            "module.ec2_private.aws_security_group.jenkins_secgroup",
            "module.ec2_private.aws_subnet.jenkins_subnet",
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a62bf22e41143a4",
            "arn": "arn:aws:ec2:ap-south-1:383058400024:instance/i-071d367cd0238a9f5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071d367cd0238a9f5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Anubhav",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a000565bc310d12c",
            "private_dns": "ip-10-0-0-164.ap-south-1.compute.internal",
            "private_ip": "10.0.0.164",
            "public_ip": "13.127.74.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-035065b20f63501b8",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033952804c5dc6b54",
            "tags": {
              "Name": "windows_server"
            },
            "tags_all": {
              "Name": "windows_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0be38b17db5a56de2"
            ]
          },
          "dependencies": [
            "module.ec2_private.aws_security_group.web_secgroup",
            "module.ec2_private.aws_subnet.web_subnet",
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383058400024:internet-gateway/igw-054f8133acfdbfcbb",
            "id": "igw-054f8133acfdbfcbb",
            "owner_id": "383058400024",
            "tags": {
              "Name": "web_igw"
            },
            "tags_all": {
              "Name": "web_igw"
            },
            "vpc_id": "vpc-0feac55dffc1f1483"
          },
          "dependencies": [
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "jenkins_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02fc0b38b6fb5b872",
            "connectivity_type": "public",
            "id": "nat-01d1e590dc329efb7",
            "network_interface_id": "eni-0d5ea8603a52ccc50",
            "private_ip": "10.0.0.234",
            "public_ip": "65.0.49.90",
            "subnet_id": "subnet-033952804c5dc6b54",
            "tags": {
              "Name": "jenkins_nat"
            },
            "tags_all": {
              "Name": "jenkins_nat"
            }
          },
          "dependencies": [
            "module.ec2_private.aws_eip.eip_nat_gateway",
            "module.ec2_private.aws_subnet.web_subnet",
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jenkins_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383058400024:route-table/rtb-0ad4ffd76e3e31047",
            "id": "rtb-0ad4ffd76e3e31047",
            "owner_id": "383058400024",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01d1e590dc329efb7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins_rt"
            },
            "tags_all": {
              "Name": "jenkins_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0feac55dffc1f1483"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_private.aws_eip.eip_nat_gateway",
            "module.ec2_private.aws_nat_gateway.jenkins_nat",
            "module.ec2_private.aws_subnet.web_subnet",
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383058400024:route-table/rtb-0fdbb15c2dbccb6ca",
            "id": "rtb-0fdbb15c2dbccb6ca",
            "owner_id": "383058400024",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-054f8133acfdbfcbb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0feac55dffc1f1483"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_private.aws_internet_gateway.web_igw",
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa88e7d5f844c130",
            "route_table_id": "rtb-0fdbb15c2dbccb6ca",
            "subnet_id": "subnet-033952804c5dc6b54"
          },
          "dependencies": [
            "module.ec2_private.aws_internet_gateway.web_igw",
            "module.ec2_private.aws_route_table.web_rt",
            "module.ec2_private.aws_subnet.web_subnet",
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins_associate_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054781252b79162c1",
            "route_table_id": "rtb-0ad4ffd76e3e31047",
            "subnet_id": "subnet-0fda814bac7dc4cd2"
          },
          "dependencies": [
            "module.ec2_private.aws_eip.eip_nat_gateway",
            "module.ec2_private.aws_nat_gateway.jenkins_nat",
            "module.ec2_private.aws_route_table.jenkins_rt",
            "module.ec2_private.aws_subnet.jenkins_subnet",
            "module.ec2_private.aws_subnet.web_subnet",
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383058400024:security-group/sg-09767662a78a54391",
            "description": "private_host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09767662a78a54391",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins_sec_grp",
            "name_prefix": "",
            "owner_id": "383058400024",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins_sec_group"
            },
            "tags_all": {
              "Name": "jenkins_sec_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0feac55dffc1f1483"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383058400024:security-group/sg-0be38b17db5a56de2",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be38b17db5a56de2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDP",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH for VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "383058400024",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_sec_group"
            },
            "tags_all": {
              "Name": "web_sec_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0feac55dffc1f1483"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383058400024:subnet/subnet-0fda814bac7dc4cd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0fda814bac7dc4cd2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "383058400024",
            "tags": {
              "Name": "jenkins_server"
            },
            "tags_all": {
              "Name": "jenkins_server"
            },
            "vpc_id": "vpc-0feac55dffc1f1483"
          },
          "dependencies": [
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383058400024:subnet/subnet-033952804c5dc6b54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-033952804c5dc6b54",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "383058400024",
            "tags": {
              "Name": "web_subnet"
            },
            "tags_all": {
              "Name": "web_subnet"
            },
            "vpc_id": "vpc-0feac55dffc1f1483"
          },
          "dependencies": [
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:383058400024:vpc/vpc-0feac55dffc1f1483",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f65b9aa9af847b90",
            "default_route_table_id": "rtb-038a729993daa8f76",
            "default_security_group_id": "sg-05a9e19d58e9471dd",
            "dhcp_options_id": "dopt-a2e851c9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0feac55dffc1f1483",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-038a729993daa8f76",
            "owner_id": "383058400024",
            "tags": {
              "Name": "web_vpc"
            },
            "tags_all": {
              "Name": "web_vpc"
            }
          }
        }
      ]
    }
  ]
}